--- a/around the world.html
+++ b/around the world.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html><head><!-- saved from url=(0083)http://web.archive.org/web/20111211160857/http://goanimate.com/movie/0-AN0HGmjtcc/1 -->
-
+<html><head>
+<!-- saved from url=(0083)http://web.archive.org/web/20111211160857/http://goanimate.com/movie/0-AN0HGmjtcc/1 -->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script type="text/javascript" async="" src="./around%20the%20world_files/plusone.js.download"></script>
 <script type="text/javascript" async="" src="./around%20the%20world_files/c5eda915a49e275384d3c74839d61b5584741010.1.js.download"></script>
@@ -15,11 +15,11 @@ __wm.wombat("http://goanimate.com/movie/0-AN0HGmjtcc/1","20111211160857","http:/
 "1323619737");
 </script>
 <link rel="stylesheet" type="text/css" href="./around%20the%20world_files/banner-styles.css">
-<link rel="stylesheet" type="text/css" href="./around%20the%20world_files/iconochive.css"><!-- End Wayback Rewrite JS Include -->
-
+<link rel="stylesheet" type="text/css" href="./around%20the%20world_files/iconochive.css">
+<!-- End Wayback Rewrite JS Include -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><title>Anistick - Around The World! - Watch animation</title>
 
-<meta name="title" content="CONEJO SICOPATA">
+<meta name="title" content="Around the World!">
 <meta name="description" content="Around the World!">
 <meta name="keywords" content="bunny, chick, comedia, comédia, comèdia, comÉdia, comÈdia, cómedia, comedía, dog, happy_bunny">
 <link rel="canonical" href="http://web.archive.org/web/20111211160857/http://goanimate.com/movie/0-AN0HGmjtcc">
@@ -30,7 +30,7 @@ __wm.wombat("http://goanimate.com/movie/0-AN0HGmjtcc/1","20111211160857","http:/
 <meta name="video_type" content="application/x-shockwave-flash">
 <meta name="medium" content="video">
 <meta property="og:type" content="article">
-<meta property="og:title" content="CONEJO SICOPATA">
+<meta property="og:title" content="Around the World!">
 <meta property="og:description" content="">
 <meta property="og:url" content="http://web.archive.org/web/20111211160857/http://goanimate.com/movie/0-AN0HGmjtcc">
 <meta property="og:image" content="http://web.archive.org/web/20111211160857im_/http://goanimate.com/files/thumbnails/movie/2164/3098164/6600118L.jpg">
@@ -50,8 +50,8 @@ __wm.wombat("http://goanimate.com/movie/0-AN0HGmjtcc/1","20111211160857","http:/
 <link href="./around%20the%20world_files/buttons.css" rel="stylesheet" type="text/css">
 <link href="./around%20the%20world_files/movie2.css" rel="stylesheet" type="text/css">
 <link href="./around%20the%20world_files/emailshare.css" rel="stylesheet" type="text/css">
-<link href="./around%20the%20world_files/dl_avi.css" rel="stylesheet" type="text/css"><!--[if lte IE 6]><link href="/static/go/css/ie6.css" rel="stylesheet" type="text/css" /><![endif]--><!--[if lte IE 7]><style type="text/css">div.header {z-index: 10;}</style><![endif]-->
-
+<link href="./around%20the%20world_files/dl_avi.css" rel="stylesheet" type="text/css">
+<!--[if lte IE 6]><link href="/static/go/css/ie6.css" rel="stylesheet" type="text/css" /><![endif]--><!--[if lte IE 7]><style type="text/css">div.header {z-index: 10;}</style><![endif]-->
 <script type="text/javascript">
 var srv_tz_os = -5, view_name = "go", user_cookie_name = "u_info";
 </script>
@@ -277,7 +277,8 @@ padding-top:0 !important;
 /*min-width:800px !important;*/
 }
 </style>
-<meta name="medium" content="video"></head>
+<meta name="medium" content="video">
+</head>
 <body>
 <div id="wildfire_cimp" style="display: none; visibility: hidden; position: absolute;"><img src="./around%20the%20world_files/CIMP.gif"></div>
 <!-- BEGIN WAYBACK TOOLBAR INSERT -->
@@ -325,7 +326,8 @@ jQuery.extend(CCStandaloneBannerAdUI, {"actionshopSWF":"http:\/\/web.archive.org
 </script><!-- HEADER -->
 <div id="header">
 <div class="header-bg"></div>
-<div class="header-inside"> <a class="site-logo" href="index.html" title="GoAnimate"> <img style="border: 0px solid ; width: 123px; height: 58px;" alt="GoAnimate" src="./around%20the%20world_files/logo_ga.png"> </a>
+<div class="header-inside"> <a class="site-logo" href="index.html" title="GoAnimate"> <img style="border: 0px solid ; width: 123px; height: 58px;" alt="GoAnimate" src="./around%20the%20world_files/logo_ga.png">
+</a>
 <div id="headertopnavmenu" class="globalnav">
 <ul id="top_nav" class="header_block">
 <li class="top_nav_item create"> <a href="create.html">Create</a>
@@ -334,7 +336,8 @@ jQuery.extend(CCStandaloneBannerAdUI, {"actionshopSWF":"http:\/\/web.archive.org
 <ul class="top_nav_submenu">
 <li class="first">
 <div class="arrow"></div>
-</li></ul>
+</li>
+</ul>
 </li>
 <li class="top_nav_item help"> <a href="http://web.archive.org/web/20111211160857/http://goanimate.com/forums">Forums</a>
 </li>
@@ -390,11 +393,10 @@ var SHARE_EMAIL_FOOTER = "\n\nMovie Title: <<<movie_title>>>\nhttp://goanimate.c
 -->
 <div style="position: relative;">
 <div id="playerdiv" style="width: 550px; height: 384px;" align="center"><br>
-<video width="548" height="406" autoplay="">
-<source src="Around%20The%20World.mp4" type="video/mp4">
-</source>
-</video></div>
-</div><div style="clear: both;"></div>
+<video width="548" height="406" autoplay="true">
+<iframe src="around%20the%20world.mp4" height="406" width="548">&lt;/source&gt;</iframe>&gt;</video></div>
+</div>
+<div style="clear: both;"></div>
 <div class="vote_bar_comment">Your reaction:</div>
 <script>
 var votedArray = null;
@@ -489,15 +491,19 @@ $('#text_limit_warning').html(count + ' characters remaining');
 </a> </div>
 <div class="info">
 <div><strong>By testacc</strong></div>
-
 <div>Joined: 3 Oct 1982</div>
 </div>
 </div>
-<div id="movie_details_container"> <span class="more"><br></span>
+<div id="movie_details_container"> <span class="more"><br>
+</span>
 <div id="movie_details">
 <p>Published on: 16 Apr 2022</p>
 <p class="description"></p>
-Tags: <span class="link">bunny</span> <span class="link">chick</span> <span class="link">comedia</span> <span class="link">comédia</span> <span class="link">comèdia</span> <span class="link">comÉdia</span> <span class="link">comÈdia</span> <span class="link">cómedia</span> <span class="link">comedía</span> <span class="link">dog</span> <span class="link">happy_bunny</span> </div>
+Tags: <span class="link">bunny</span> <span class="link">chick</span> <span class="link">comedia</span>
+<span class="link">comédia</span> <span class="link">comèdia</span> <span class="link">comÉdia</span>
+<span class="link">comÈdia</span> <span class="link">cómedia</span> <span class="link">comedía</span>
+<span class="link">dog</span> <span class="link">happy_bunny</span>
+</div>
 </div>
 </div>
 <script type="text/javascript">
@@ -508,7 +514,8 @@ jQuery(this).addClass('hover');
 function() {
 jQuery(this).removeClass('hover');
 }
-);</script><div id="movie_signup" class="column">
+);</script>
+<div id="movie_signup" class="column">
 <form id="movie_signup_form" action="http://web.archive.org/web/20111211160857/http://goanimate.com/movie/0-AN0HGmjtcc/1" method="post"><br>
 </form>
 </div>
@@ -525,7 +532,20 @@ FB.Event.subscribe('edge.create', handleFacebookLike);
 FB.Event.subscribe('edge.create', function(response) {
 jQuery.ajax({ url: '/ajax/postMovieEvent/0csIrgsB62UXmZT9Q6DlLRGtitNd0h-oT' });
 });
-});</script> &nbsp; &nbsp;Description:<br><br><br><a href="around%20the%20world%202008.html">Click here for the 2010 version!</a><br><a href="dark%20around%20the%20worl.html">Click here for the dark mode version!\</a><br><br>Published on: 4/16/2022<br><br>Tags: around_the_world, daft_punk, test_video<br><br><br>
+});</script>
+&nbsp; &nbsp;Description:<br>
+<br>
+<br>
+<a href="around%20the%20world%202008.html">Click here for
+the 2010 version!</a><br>
+<a href="dark%20around%20the%20worl.html">Click here for
+the dark mode version!\</a><br>
+<br>
+Published on: 4/16/2022<br>
+<br>
+Tags: around_the_world, daft_punk, test_video<br>
+<br>
+<br>
 <div id="page_name" style="display: none;">%3Amovie%3A0-AN0HGmjtcc%3A1</div>
 <div id="json_user" style="display: none;">0</div>
 </div>
@@ -536,17 +556,18 @@ jQuery.ajax({ url: '/ajax/postMovieEvent/0csIrgsB62UXmZT9Q6DlLRGtitNd0h-oT' });
 <div class="footer-inside clearfix">
 <div class="as-seen-on clearfix">
 <h4>As seen on:</h4>
-<br> </div>
+<br>
+</div>
 <hr>
 <div id="footernav" class="clearfix"><br>
-
 </div>
 <hr>
 <div class="footer-lang"> <span class="element">Select
 your preferred language:</span> <span class="element">
 <span class="selected">English</span></span><span class="element"> </span>
 </div>
-<div class="copyright">Anistick 2022(Version: Cooked Salmon)</div>
+<div class="copyright">Anistick 2022(Version: Cooked
+Salmon)</div>
 </div>
 </div>
 <div id="studio_container" style="display: none;">
