--- a/around the world.html
+++ b/around the world.html
@@ -394,7 +394,9 @@ var SHARE_EMAIL_FOOTER = "\n\nMovie Title: <<<movie_title>>>\nhttp://goanimate.c
 <div style="position: relative;">
 <div id="playerdiv" style="width: 550px; height: 384px;" align="center"><br>
 <video width="548" height="406" autoplay="true">
-<iframe src="around%20the%20world.mp4" height="406" width="548">&lt;/source&gt;</iframe>&gt;</video></div>
+<source src="around%20the%20world.mp4" type="video/mp4">
+<source src="around%20the%20world.ogg" type="video/ogg">
+</source></source></video></div>
 </div>
 <div style="clear: both;"></div>
 <div class="vote_bar_comment">Your reaction:</div>
